// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <ErrorPage /> when message is defined matches snapshot 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      An error has occurred
    </h1>
  </header>
  <div
    class="ErrorPage--content"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p>
      Test message
    </p>
  </div>
</article>
`;

exports[`[presentation] <ErrorPage /> when status is 404 matches snapshot 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      Page not found
    </h1>
  </header>
  <div
    class="ErrorPage--content"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p>
      This page does not exist - please use the site navigation to find what you're looking for.
    </p>
  </div>
</article>
`;

exports[`[presentation] <ErrorPage /> when status is 500 matches snapshot 1`] = `
<article
  class="ErrorPage"
>
  <header
    class="PageHeader"
  >
    <h1>
      An error has occurred
    </h1>
  </header>
  <div
    class="ErrorPage--content"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p>
      An error has occurred, please try again.
    </p>
  </div>
</article>
`;
